Fix bug not writing the fix version id attribute for xml output

Instead of writing the ‘id’ attribute, which is checked when
the file is read, the ‘date’ attribute was written without
content.

BUG:498416
FIXED-IN:5.2