kmymoney/plugins/xml/mymoneyxmlwriter.cpp
@@ -157,8 +157,7 @@ void MyMoneyXmlWriterPrivate::writeFileInformation()
     m_writer->writeAttribute(attributeName(Attribute::General::ID), QLatin1String("1"));
     m_writer->writeEndElement();
     m_writer->writeStartElement(elementName(Element::General::FixVersion));
-    m_writer->writeAttribute(attributeName(Attribute::General::Date),
-                             m_file->parametersModel()->itemById(m_file->fixedKey(MyMoneyFile::FileFixVersion)).value());
+    m_writer->writeAttribute(attributeName(Attribute::General::ID), m_file->parametersModel()->itemById(m_file->fixedKey(MyMoneyFile::FileFixVersion)).value());
     m_writer->writeEndElement();
     m_writer->writeStartElement(elementName(Element::General::ApplicationVersion));
     m_writer->writeAttribute(attributeName(Attribute::General::ID), QLatin1String(VERSION));
